# gloid

./: CMakeLists.txt  GLoid2.url  Gloid2.dev  Makefile.in  Makefile.osx  Makefile.win  ReadMe.txt  arkanoid.txt  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  hallofame.txt
CVS/.svn/: entries
CVS/.svn/text-base/: Root.svn-base
gloid/.svn/: entries
levels/: level1.ase  level1.txt  level10.ase  level10.txt  level11.txt  level12.ase  level12.txt  level2.txt  level3.ase  level3.txt  level4.txt  level5.ase  level5.txt  level6.txt  level7.ase  level7.txt  level8.txt  level9.txt
levels/.svn/: entries
levels/.svn/text-base/: level11.ase.svn-base  level6.ase.svn-base  level8.ase.svn-base  level9.ase.svn-base
sounds/.svn/: entries
sounds/.svn/text-base/: enlarge.wav.svn-base  go.wav.svn-base  kanonaki.wav.svn-base  launch.wav.svn-base  warp.wav.svn-base
src/: CMakeLists.txt  Engine.cpp  Engine.h  Functions.cpp  Functions.h  GLoid.cpp  GLoid.h  Game.cpp  Game.h  Hud.cpp  Hud.h  Point.cpp  Point.h  Step.cpp  Step.h  Text.h  World.h  gloid.h  gloid_base.cpp  gloid_world.cpp
src/.svn/: entries
src/.svn/text-base/: gloid_functions.cpp.svn-base  gloid_loading.cpp.svn-base  gloid_main.cpp.svn-base
src/game/: Go.cpp  Go.h  Intro.cpp  Intro.h  Loading.cpp  Loading.h  Play.cpp  Play.h  Waiting.cpp  Waiting.h  Win.cpp  Win.h
src/model/: Alien.cpp  Alien.h  Ball.cpp  Ball.h  Brick.cpp  Brick.h  Crosshair.cpp  Crosshair.h  Particle.cpp  Particle.h  Pill.cpp  Pill.h  Shot.cpp  Shot.h  Vaus.cpp  Vaus.h  WhatUC.h
textures/.svn/: entries
textures/.svn/text-base/: arka1_hires.bmp.svn-base  arka2_hires.bmp.svn-base  crosshairs.bmp.svn-base  crosshairs.gif.svn-base  gloid.bmp.svn-base  vaus.bmp.svn-base  warp.bmp.svn-base
tst/: CMakeLists.txt  GameMock.h  engine_test.cpp  functions_test.cpp  game_test.cpp  mock_sdl_opengl.cpp  mock_sdl_opengl.h  model_test.cpp  model_test.h
